# FontConverter

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md  build-dev.sh  build.sh  package.json  tsconfig.json
build-tools/: CMakeLists.custom.txt
lib/: fontconverter.cpp  fontconverter.h  main.cpp
patches/: exports.mk.patch  ftoption.h.patch
src/: fontconverter.cpp  fontconverter.h  index.ts  main.cpp  utils.h
src/types/: emscripten.d.ts
test/: test.js  test.ts
